try fixing mobile alignment issue

--- a/styles.css
+++ b/styles.css
@@ -2360,11 +2360,17 @@ html {
 
 .checkbox-group label {
     display: flex;
-    align-items: center;
+    flex:2;
+    align-items: left;
     cursor: pointer;
     color: #ff6b6b;
 }
 
+.checkbox-group input {
+    display: flex;
+    flex:1;
+    align-items: right;
+}
 .checkbox-group input[type="checkbox"] {
     margin-right: 0.5rem;
 }
